kubernetes_templates/deployment/components/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-deployment-template
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-deployment-template
  template:
    metadata:
      labels:
        app: java-deployment-template
    spec:
      containers:
      - name: java-deployment-template
        image: devops-service:1.0.0
        ports:
        - containerPort: 8080
