kubernetes_templates/deployment/components/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-deployment-template
spec:
  type: ClusterIP
  selector:
    app: java-deployment-template
  ports:
  - name: http
    protocol: TCP
    targetPort: 8080
    port: 8080
