kubernetes_templates/deployment/components/route.yaml
apiVersion: route.openshift.io/v1
kind: Route 
metadata:
  name: java-deployment-template
spec:     
  to:
    kind: Service
    name: java-deployment-template
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
